Documentation for notebooks 1 and 2. Inclusion of notebook 3 with the linear mixed model analysis. Changes to be committed: 	modified:   1_Generate_Data_Plot_Trendlines.ipynb 	modified:   2_Multiple_Linear_Regression_Model.ipynb 	new file:   3_R_Statistics_Linear_Mixed_Model.ipynb

--- a/1_Generate_Data_Plot_Trendlines.ipynb
+++ b/1_Generate_Data_Plot_Trendlines.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Multiple Linear Regression Model\n",
+    "## Part A - Section IV\n",
+    "\n",
+    "This part contains the visual comparison between community and non community participants."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "**Description:** reproduction of the results presented in section IV. A in the paper 'Online Sharing of physical activity'.\n",
     "\n",
