--- a/2_Multiple_Linear_Regression_Model.ipynb
+++ b/2_Multiple_Linear_Regression_Model.ipynb
@@ -11,6 +11,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "**Description:** reproduction of the results presented in section IV.B in the paper 'Online Sharing of physical activity'.\n",
+    "\n",
+    "**Author:** Eric Araujo\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
